src/components/CreateExperience/createExperience.module.css
:root {
  --purple: #7201a5;
  --white: #ffffff;
  --grey: rgb(228, 228, 228);
  --textColor: rgb(22, 22, 22);
}

.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: var(--white);
    max-width: 100%;
    margin-left: 100px;
}

.mainContainer {
  height: 550px;
  width: 98%;
 
}

h2 {
    color: var(--purple);
    margin-top: 20px;
    font-weight: 600;
}

.formImage {
    max-width: 650px;
    height: 520px;
    box-shadow:0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 8px 8px rgba(0,0,0,0.11),0 16px 16px rgba(0,0,0,0.11),0 32px 32px rgba(0,0,0,0.11)}.shadow-sharp{box-shadow:0 1px 1px rgba(0,0,0,0.25),0 2px 2px rgba(0,0,0,0.2),0 4px 4px rgba(0,0,0,0.15),0 8px 8px rgba(0,0,0,0.1),0 16px 16px rgba(0,0,0,0.05)}.shadow-diffuse{box-shadow:0 1px 1px rgba(0,0,0,0.08),0 2px 2px rgba(0,0,0,0.12),0 4px 4px rgba(0,0,0,0.16),0 8px 8px rgba(0,0,0,0.2)}.shadow-dreamy{box-shadow:0 1px 2px rgba(0,0,0,0.07),0 2px 4px rgba(0,0,0,0.07),0 4px 8px rgba(0,0,0,0.07),0 8px 16px rgba(0,0,0,0.07),0 16px 32px rgba(0,0,0,0.07),0 32px 64px rgba(0,0,0,0.07)}.shadow-shorter{box-shadow:0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11)}.shadow-longer{box-shadow:0 2px 1px rgba(0,0,0,0.09),0 4px 2px rgba(0,0,0,0.09),0 8px 4px rgba(0,0,0,0.09),0 16px 8px rgba(0,0,0,0.09),0 32px 16px rgba(0,0,0,0.09);
}


.leftImage {
    min-width: 50vw;
    text-align: center;
    margin: 20px 0;
}

.rightForm {
    min-width: 50vw;
    height: 550px;
}


input {
    max-width: 500px;
    margin: 3px;
    height: 35px; 
    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
}


textarea:focus, input:focus{
    outline: none;
}



/* display flex used to put location and date inputs on same line*/
.locationDateFlex {
    display: flex;
    flex-direction: row;
}

.form, .formDate {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: var(--white);
  border: 1px solid #ced4da;
  border-radius: 10px;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}


.formLocation {
  display: block;
  width: 98%;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  background-color: var(--white);
  background-clip: padding-box;
  border: 1px solid #ced4da;
  appearance: none;
  border-radius: 10px;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  margin-right: 35px;
}



.formImageFile {
  border: 1px solid rgb(212, 212, 212);
  padding: 9px;
  width: 100%;
}

.button {
    display:inline-block;
    padding:0.3em 1.2em;
    border:0.16em solid rgba(255,255,255,0);
    border-radius:2em;
    box-sizing: border-box;
    text-decoration:none;
    font-family:'Roboto',sans-serif;
    font-weight:300;
    color:var(--white);
    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
    text-align:center;
    transition: all 0.2s;
    background-color:var(--purple);
    margin: 10px 0 15px 7px;
}    


/* MEDIA QUERIES */
@media only screen 
   and (max-width : 1363px) {
    .formImage {
        max-width: 600px;
        height: 480px;
    }
    .mainContainer{
        margin-top: 30px;
    }
}

@media only screen 
   and (max-width : 1273px) {
    .container {
        display: flex;
        flex-direction: column;
        text-align: center;
    }
   
 
    input {
        max-width: 500px;   
        margin: 0 auto;
    }
    .formLocation{
       padding-left: 40px;
        width: 99%;  
    }
    .locationDateFlex{
        justify-content: center;
    }

    .form {
        margin-bottom: 3px;
    }
    .formLocation {
        margin: 0 26px 3px 5px;
    }
    .formDate{
        width: 96%;
    }
 

}

@media only screen 
   and (max-width : 768px) {
    .container {
        display: flex;
        flex-direction: column;
        margin-left: 0;
    }
    .formImage {
        min-width: 550px;
        height: 450px;
    }
    .form, .formLocation {
        margin: 0 auto;
        margin-bottom: 3px;
    }
}

@media only screen 
   and (max-width : 648px) {
    .container {
        display: flex;
        flex-direction: column;
        margin-left: 0;
    }
    .formImage {
        min-width: 430px;
        height: 430px;
    }
   
}

@media only screen 
   and (max-width : 586px) {
    .container {
        display: flex;
        flex-direction: column;
        margin-left: 0;
    }
    .formImage {
        max-width: 350px;
        height: 350px;
    }
  
    .locationDateFlex {
        display: flex;
        flex-direction: column;
    }
    .form, .formLocation {
        margin: 0 auto;
        margin-bottom: 3px;
    }
   
}


@media only screen 
   and (max-width : 454px) {
    .container {
        display: flex;
        flex-direction: column;
        margin-left: 0;
    }
    .formImage {
        min-width: 250px;
        height: 250px;
    }
    .button {
        padding:0.1em 1em;
        margin-bottom: 10px;
    }    

    .locationDateFlex {
        display: flex;
        flex-direction: column;
    }
    .form, .formLocation {
        margin: 0 auto;
        margin-bottom: 3px;
    }

}     

